...
            confirmButton = {
                TextButton(
                    onClick = {
                        appState.stopAutomaticAttachmentDownloads()
                        stopConfirmation = false
                    },
                    modifier = Modifier.testTag("download.stop.confirm"),
                ) { Text(stringResource(R.string.download_stop)) }
            },
            dismissButton = {
                TextButton(onClick = { stopConfirmation = false }) { Text(stringResource(R.string.cancel)) }
            },
        )
...
